22.2
-----
* [**] [Jetpack-only] Added a dashboard card for purchasing domains. [#20424]
* [*] [internal] [Jetpack-only] Redesigned the migration success card. [#20515]
* [**] [internal] Refactored Google SignIn implementation to not use the Google SDK [#20128]
* [***] Block Editor: Resolved scroll-jump issues and enhanced caret focus management [https://github.com/WordPress/gutenberg/pull/48791]

22.1
-----
* [**] [internal] Refactor updating account related Core Data operations, which ususally happens during log in and out of the app. [#20394]
* [***] [internal] Refactor uploading photos (from the device photo, the Free Photo library, and other sources) to the WordPress Media Library. Affected areas are where you can choose a photo and upload, including the "Media" screen, adding images to a post, updating site icon, etc. [#20322]
* [**] [WordPress-only] Warns user about sites with only individual plugins not supporting core app features and offers the option to switch to the Jetpack app. [#20408]
* [*] [Reader] Fix an issue that was causing the app to crash when tapping the More or Share buttons in Reader Detail screen. [#20490]
* [*] Block editor: Avoid empty Gallery block error [https://github.com/WordPress/gutenberg/pull/49557]

22.0
-----
* [*] Remove large title in Reader and Notifications tabs. [#20271]
* [*] Reader: Change the following button cog icon. [#20274]
* [*] [Jetpack-only] Change the dark background color of toolbars and top tabs across the whole app. [#20278]
* [*] Change the Reader's navigation bar background color to match other screens. [#20278]
* [*] Tweak My Site Dashboard Cards UI. [#20303]
* [*] [Jetpack-only] Change My Sites tab bar icon. [#20310]
* [*] [internal] Refactored the Core Data operations (saving the site data) after a new site is created. [#20270]
* [*] [internal] Refactored updating user role in the "People" screen on the "My Sites" tab. [#20244]