@@ -4,6 +4,7 @@
 * [*] [internal] [Jetpack-only] Redesigned the migration success card. [#20515]
 * [**] [internal] Refactored Google SignIn implementation to not use the Google SDK [#20128]
 * [***] Block Editor: Resolved scroll-jump issues and enhanced caret focus management [https://github.com/WordPress/gutenberg/pull/48791]
+* [**] [Jetpack-only] Blogging Prompts: adds the ability to view other users' responses to a prompt. [#]
 
 22.1
 -----
